--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 sudo: false
 dist: trusty
-bundler_args: "--verbose"
+install: bundle install --jobs=3 --retry=3 --verbose
 script: "rake test"
 rvm:
   - 1.8.7-p371
